--- a/trn02/css/common.css
+++ b/trn02/css/common.css
@@ -245,7 +245,7 @@ section.ad_visual .stit p span {
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25);
   overflow: hidden;
   text-align: center;
-  display: none;
+  /* display: none; */
 }
 .map_txt h3 {
   font-weight: 600;
