--- a/trn02/css/common.css
+++ b/trn02/css/common.css
@@ -225,25 +225,28 @@ section.ad_visual .stit p span {
   font-size: 20px;
   line-height: 1.2;
 }
-.map {
-  max-width: 785px;
-  width: 100%;
-  margin: 0 auto;
+.store .content {
   position: relative;
+}
+.map {
+  max-width: 795px;
+  width: 100%;
+  height: 100%;
+  margin: -210px auto 0;
 }
 .map img {
   max-width: 100%;
 }
 .map_txt {
-  position: absolute;
+  position: sticky;
   top: 50%;
-  right: 0;
+  left: -380px;
   max-width: 380px;
   width: 100%;
   border-radius: 25px;
   background: #fff;
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.25);
-  overflow: hidden;
+  /* overflow: hidden; */
   text-align: center;
   /* display: none; */
 }
@@ -260,6 +263,9 @@ section.ad_visual .stit p span {
   font-weight: 600;
   font-size: 50px;
   padding: 35px 0;
+}
+.map_maker {
+  display: none;
 }
 .sns_review {
   background: url(../img/bg.png) repeat-x 0 / cover;
@@ -347,25 +353,16 @@ footer ul li:last-child {
 footer .copy {
   padding-top: 15px;
 }
-.mbt {
+.mbt,
+.mob_map {
   display: none;
 }
 /*이미지맵*/
 img[usemap] {
   border: none;
   height: auto;
-  max-width: 100% !important;
-  width: auto;
+  width: 100%;
 }
-@media (max-width: 991px) {
-  img[usemap] {
-    border: none;
-    height: 100% !important;
-    max-width: 100%;
-    width: 100% !important;
-  }
-}
-
 @media (max-width: 1024px) {
   header {
     padding: 10px 0;
@@ -413,6 +410,70 @@ img[usemap] {
   nav ul {
     flex-direction: column;
   }
+  .map {
+    margin-top: 30px;
+    position: relative;
+  }
+  .map::after {
+    content: "";
+    display: block;
+    background: rgba(0, 0, 0, 0.1);
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .map_txt {
+    display: none;
+  }
+  .mob_map {
+    display: block;
+    text-align: center;
+  }
+  .mob_map a {
+    display: inline-block;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 10px 20px;
+    background: #212529;
+    border-radius: 3px;
+  }
+  /* .map_maker li {
+    position: absolute;
+    color: var(--mc2);
+    left: 50%;
+    top: 50%;
+    animation: star 1s ease-in infinite; 
+  }
+  .map_maker li:first-child {
+    transform: translate(-50%, 360%);
+  }
+  .map_maker li:nth-child(2) {
+    transform: translate(-360%, -360%);
+    animation-delay: 0.5s;
+  }
+  .map_maker li:nth-child(3) {
+    transform: translate(-360%, -720%);
+    animation-delay: 1s;
+  }
+  .map_maker li:nth-child(4) {
+    transform: translate(-360%, -720%); 
+    animation-delay: 1.5s;
+  }
+  .map_maker li:last-child {
+    transform: translate(360%, -750%);
+    animation-delay: 2s;
+  } */
 }
 @media (max-width: 767px) {
   .visual {
@@ -487,5 +548,17 @@ img[usemap] {
   }
   footer .foot_logo {
     padding-bottom: 15px;
+  }
+}
+
+@keyframes star {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
