--- a/trn03/css/common.css
+++ b/trn03/css/common.css
@@ -1,23 +1,14 @@
-* {
-  box-sizing: border-box;
+:root {
+  --sc: #666;
+  --mc: #fef100;
 }
 
 body {
-  background-color: #ffe53b;
   height: 100vh;
 }
 
 .blog-slider {
-  width: 95%;
-  position: relative;
-  max-width: 800px;
-  margin: auto;
   background: #fff;
-  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-  padding: 25px;
-  border-radius: 25px;
-  height: 400px;
-  transition: all 0.3s;
 }
 @media screen and (max-width: 992px) {
   .blog-slider {
@@ -257,6 +248,106 @@ body {
     height: 11px;
     width: 30px;
   }
+}
+
+/*css*/
+.inner {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.flex {
+  display: flex;
+}
+
+.submenu {
+  display: flex;
+}
+
+header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  padding: 15px;
+  z-index: 3;
+}
+header.on, header:hover {
+  background: #fff;
+}
+header.on nav > ul > li > a, header:hover nav > ul > li > a {
+  color: #000;
+}
+header > .inner {
+  align-items: center;
+}
+header nav {
+  margin-left: auto;
+}
+header nav > ul {
+  gap: 30px;
+}
+header nav > ul > li > a {
+  font-size: 18px;
+  color: #fff;
+}
+header .submenu {
+  position: absolute;
+  width: 100%;
+  background: #fff;
+  left: 0;
+  top: 100%;
+  display: none;
+  padding: 25px 0;
+}
+header .submenu > .inner {
+  gap: 30px;
+}
+header .submenu h2 {
+  font-size: 35px;
+  font-weight: 500;
+}
+header .submenu .sub_tit p {
+  padding-top: 20px;
+}
+header .submenu .sub_tit p span {
+  display: block;
+  line-height: 1.2;
+  color: var(--sc);
+  font-size: 14px;
+}
+header .submenu.on {
+  display: block;
+}
+header .submenu .sub_real_menu ul li {
+  padding-bottom: 15px;
+}
+header .submenu .sub_real_menu ul li:last-child {
+  padding-bottom: 0;
+}
+header .submenu .sub_real_menu ul li a {
+  display: inline-block;
+  font-size: 16px;
+  color: var(--sc);
+  position: relative;
+  z-index: 2;
+}
+header .submenu .sub_real_menu ul li a::after {
+  content: "";
+  display: inline-block;
+  width: 0px;
+  height: 5px;
+  background: var(--mc);
+  transform: rotate(2deg);
+  position: absolute;
+  bottom: 2px;
+  left: 0;
+  z-index: -1;
+}
+header .submenu .sub_real_menu ul li a:hover::after {
+  width: 100%;
+  transition: 0.5s all;
 }
 
 /*# sourceMappingURL=common.css.map */
