--- a/trn03/css/common.scss
+++ b/trn03/css/common.scss
@@ -1,6 +1,7 @@
 :root {
   --sc: #666;
   --mc: #fef100;
+  --bg: #fd3838;
 }
 
 body {
@@ -10,34 +11,20 @@ body {
 
 .blog-slider {
   background: #fff;
+  height: 100vh;
   // box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
   // padding: 25px;
   // border-radius: 25px;
   // height: 400px;
   // transition: all 0.3s;
 
-  @media screen and (max-width: 992px) {
-    max-width: 680px;
-    height: 400px;
-  }
-
-  @media screen and (max-width: 768px) {
-    min-height: 500px;
-    height: auto;
-    margin: 180px auto;
-  }
-
-  @media screen and (max-height: 500px) and (min-width: 992px) {
-    height: 350px;
-  }
-
   &__item {
     display: flex;
     align-items: center;
-
-    @media screen and (max-width: 768px) {
-      flex-direction: column;
-    }
+    background: #fff;
+    padding-top: 100px;
+    height: 100vh;
+    overflow: hidden;
 
     &.swiper-slide-active {
       .blog-slider__img {
@@ -61,113 +48,113 @@ body {
     }
   }
 
-  &__img {
-    // width: 40%;
-    width: 300px;
-    flex-shrink: 0;
-    height: 300px;
-    background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-    box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
-    border-radius: 20px;
-    transform: translateX(-80px);
+  // &__img {
+  //   // width: 40%;
+  //   width: 300px;
+  //   flex-shrink: 0;
+  //   height: 300px;
+  //   background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+  //   box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+  //   border-radius: 20px;
+  //   transform: translateX(-80px);
 
-    overflow: hidden;
+  //   overflow: hidden;
 
-    &:after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-      border-radius: 20px;
-      opacity: 0.8;
-    }
+  //   &:after {
+  //     content: "";
+  //     position: absolute;
+  //     top: 0;
+  //     left: 0;
+  //     width: 100%;
+  //     height: 100%;
+  //     background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+  //     border-radius: 20px;
+  //     opacity: 0.8;
+  //   }
 
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      display: block;
-      opacity: 0;
-      border-radius: 20px;
-      transition: all 0.3s;
-    }
+  //   img {
+  //     width: 100%;
+  //     height: 100%;
+  //     object-fit: cover;
+  //     display: block;
+  //     opacity: 0;
+  //     border-radius: 20px;
+  //     transition: all 0.3s;
+  //   }
 
-    @media screen and (max-width: 992px) {
-      // width: 45%;
-    }
-    @media screen and (max-width: 768px) {
-      transform: translateY(-50%);
-      width: 90%;
-    }
-    @media screen and (max-width: 576px) {
-      width: 95%;
-    }
-    @media screen and (max-height: 500px) and (min-width: 992px) {
-      height: 270px;
-    }
-  }
+  //   @media screen and (max-width: 992px) {
+  //     // width: 45%;
+  //   }
+  //   @media screen and (max-width: 768px) {
+  //     transform: translateY(-50%);
+  //     width: 90%;
+  //   }
+  //   @media screen and (max-width: 576px) {
+  //     width: 95%;
+  //   }
+  //   @media screen and (max-height: 500px) and (min-width: 992px) {
+  //     height: 270px;
+  //   }
+  //}
 
-  &__content {
-    // width: 60%;
-    padding-right: 25px;
-    @media screen and (max-width: 992px) {
-      // width: 55%;
-    }
-    @media screen and (max-width: 768px) {
-      margin-top: -80px;
-      text-align: center;
-      padding: 0 30px;
-    }
+  // &__content {
+  //   // width: 60%;
+  //   padding-right: 25px;
+  //   @media screen and (max-width: 992px) {
+  //     // width: 55%;
+  //   }
+  //   @media screen and (max-width: 768px) {
+  //     margin-top: -80px;
+  //     text-align: center;
+  //     padding: 0 30px;
+  //   }
 
-    @media screen and (max-width: 576px) {
-      padding: 0;
-    }
-    > * {
-      opacity: 0;
-      transform: translateY(25px);
-      transition: all 0.4s;
-    }
-  }
+  //   @media screen and (max-width: 576px) {
+  //     padding: 0;
+  //   }
+  //   > * {
+  //     opacity: 0;
+  //     transform: translateY(25px);
+  //     transition: all 0.4s;
+  //   }
+  // }
 
-  &__code {
-    color: #7b7992;
-    margin-bottom: 15px;
-    display: block;
-    font-weight: 500;
-  }
+  // &__code {
+  //   color: #7b7992;
+  //   margin-bottom: 15px;
+  //   display: block;
+  //   font-weight: 500;
+  // }
 
-  &__title {
-    font-size: 24px;
-    font-weight: 700;
-    color: #0d0925;
-    margin-bottom: 20px;
-  }
+  // &__title {
+  //   font-size: 24px;
+  //   font-weight: 700;
+  //   color: #0d0925;
+  //   margin-bottom: 20px;
+  // }
 
-  &__text {
-    color: #4e4a67;
-    margin-bottom: 30px;
-    line-height: 1.5em;
-  }
+  // &__text {
+  //   color: #4e4a67;
+  //   margin-bottom: 30px;
+  //   line-height: 1.5em;
+  // }
 
-  &__button {
-    display: inline-flex;
-    background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-    padding: 15px 35px;
-    border-radius: 50px;
-    color: #fff;
-    box-shadow: 0px 14px 80px rgba(252, 56, 56, 0.4);
-    text-decoration: none;
-    font-weight: 500;
-    justify-content: center;
-    text-align: center;
-    letter-spacing: 1px;
-    @media screen and (max-width: 576px) {
-      width: 100%;
-    }
-  }
+  // &__button {
+  //   display: inline-flex;
+  //   background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+  //   padding: 15px 35px;
+  //   border-radius: 50px;
+  //   color: #fff;
+  //   box-shadow: 0px 14px 80px rgba(252, 56, 56, 0.4);
+  //   text-decoration: none;
+  //   font-weight: 500;
+  //   justify-content: center;
+  //   text-align: center;
+  //   letter-spacing: 1px;
+  //   @media screen and (max-width: 576px) {
+  //     width: 100%;
+  //   }
+  // }
   .swiper-container-horizontal > .swiper-pagination-bullets,
   .swiper-pagination-custom,
   .swiper-pagination-fraction {
@@ -242,14 +229,21 @@ header {
   top: 0;
   width: 100%;
   padding: 15px;
+  border-bottom: 1px solid #dfdfdf;
   z-index: 3;
-  &.on,
-  &:hover {
-    background: #fff;
-    & nav > ul > li > a {
-      color: #000;
+  & h1 a {
+    display: block;
+    & img {
+      width: 70px;
     }
   }
+  // &.on,
+  // &:hover {
+  //   background: #fff;
+  //   & nav > ul > li > a {
+  //     color: #000;
+  //   }
+  // }
   & > .inner {
     align-items: center;
   }
@@ -259,7 +253,11 @@ header {
       gap: 30px;
       & > li > a {
         font-size: 18px;
-        color: #fff;
+        color: #000;
+      }
+      & > li.on > a,
+      & > li > a:hover {
+        color: var(--mc);
       }
     }
   }
@@ -273,6 +271,18 @@ header {
     padding: 25px 0;
     & > .inner {
       gap: 30px;
+      position: relative;
+      &::after {
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        content: "";
+        display: inline-block;
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+        background: url(../img/item01.jpg) no-repeat center center/cover;
+      }
     }
     & h2 {
       font-size: 35px;
@@ -291,33 +301,195 @@ header {
       display: block;
     }
     & .sub_real_menu ul li {
-      padding-bottom: 15px;
-    }
-    & .sub_real_menu ul li:last-child {
-      padding-bottom: 0;
-    }
-    & .sub_real_menu ul li a {
-      display: inline-block;
-      font-size: 16px;
-      color: var(--sc);
-      position: relative;
-      z-index: 2;
-      &::after {
-        content: "";
+      padding-bottom: 20px;
+      &:last-child {
+        padding-bottom: 0;
+      }
+      & a {
         display: inline-block;
-        width: 0px;
-        height: 5px;
-        background: var(--mc);
-        transform: rotate(2deg);
-        position: absolute;
-        bottom: 2px;
-        left: 0;
-        z-index: -1;
-      }
-      &:hover::after {
-        width: 100%;
-        transition: 0.5s all;
+        font-size: 16px;
+        color: var(--sc);
+        position: relative;
+        z-index: 2;
+        &::after {
+          content: "";
+          display: inline-block;
+          width: 0px;
+          height: 5px;
+          background: var(--mc);
+          transform: rotate(2deg);
+          position: absolute;
+          bottom: 2px;
+          left: 0;
+          z-index: -1;
+        }
+        &:hover::after {
+          width: 100%;
+          transition: 0.5s all;
+        }
       }
     }
+  }
+}
+
+/*visual*/
+.visual_slider {
+  & .swiper-button-next:after,
+  & .swiper-button-prev:after {
+    display: none;
+  }
+  & .swiper-pagination {
+    bottom: 30px;
+  }
+  & .swiper-pagination-bullet {
+    width: 100px;
+    height: 8px;
+    border-radius: 0;
+    background: #fff;
+    opacity: 0.8;
+    &::after {
+      content: "";
+      display: block;
+      width: 0;
+      height: 100%;
+      background: var(--bg);
+    }
+  }
+  & .swiper-pagination-bullet-active {
+    &::after {
+      width: 100%;
+      transition: 2.3s;
+    }
+  }
+  & .swiper-slide {
+    // width: 70% !important;
+    max-width: 950px;
+    // position: relative;
+    // padding-bottom: 25%;
+    opacity: 0.3;
+    transition: 0.3s;
+    & img {
+      width: 100%;
+      height: 600px;
+      object-fit: cover;
+      // position: absolute;
+      // width: 100%;
+      // height: 100%;
+    }
+    &.on {
+      opacity: 1;
+      // width: 70% !important;
+    }
+    & .visual_txt {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      max-width: 1200px;
+      width: 100%;
+      padding: 0 60px;
+      z-index: 2;
+      & strong {
+        display: inline-block;
+        border-radius: 50px;
+        padding: 5px 20px;
+        font-size: 20px;
+        background: var(--mc);
+      }
+      & h2 {
+        font-size: 65px;
+        color: #fff;
+        padding: 20px 0 35px;
+        & span {
+          display: block;
+          line-height: 1.2;
+        }
+      }
+      & a {
+        display: inline-block;
+        padding: 10px 40px 15px;
+        font-size: 18px;
+        font-weight: bold;
+        color: #fff;
+        border-radius: 5px;
+        background: var(--bg);
+      }
+      & > * {
+        transform: translateY(50px);
+        transition: 0.5s;
+        opacity: 0;
+      }
+    }
+    &.on .visual_txt {
+      & > * {
+        transform: translateY(0);
+        opacity: 1;
+      }
+      & strong {
+        transition-delay: 0.5s;
+      }
+      & h2 {
+        transition-delay: 0.8s;
+      }
+      & a {
+        transition-delay: 1s;
+      }
+    }
+  }
+}
+.sec_tit {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+  padding-bottom: 50px;
+  & h2 {
+    font-size: 40px;
+  }
+  & p {
+    font-size: 20px;
+    color: var(--sc);
+    padding-left: 10px;
+  }
+}
+.new_product {
+  gap: 30px;
+}
+.new_product li {
+  flex: 1;
+  width: 25%;
+  & a {
+    display: block;
+    text-align: center;
+    & h3 {
+      padding: 15px 0;
+      font-size: 20px;
+    }
+    & strong {
+      color: var(--sc);
+    }
+  }
+  & .img_bg {
+    overflow: hidden;
+    & img {
+      height: 200px;
+      object-fit: cover;
+    }
+  }
+  & a:hover img {
+    //transform: rotate(20deg);
+    animation: rotate 0.8s infinite;
+    transform-origin: center bottom;
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: translateY(10px);
+  }
+  50% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(10px);
   }
 }
