--- a/trn03/css/common.css
+++ b/trn03/css/common.css
@@ -355,35 +355,105 @@ header .submenu .sub_real_menu ul li a:hover::after {
   padding-left: 10px;
 }
 
-.new_product {
+.new_product .content ul {
   gap: 30px;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
-
-.new_product li {
-  flex: 1;
-  width: 25%;
+.new_product .content ul li {
+  width: calc(25% - 30px);
 }
-.new_product li a {
+.new_product .content ul li a {
   display: block;
   text-align: center;
 }
-.new_product li a h3 {
+.new_product .content ul li a .img_inner {
+  background: #fff;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+.new_product .content ul li a h3 {
   padding: 15px 0;
   font-size: 20px;
 }
-.new_product li a strong {
+.new_product .content ul li a strong {
   color: var(--sc);
 }
-.new_product li .img_bg {
+.new_product .content ul li .img_bg {
+  position: relative;
+  width: 200px;
+  margin: 0 auto;
+  border-radius: 50%;
+}
+.new_product .content ul li .img_bg img {
+  width: 100%;
+  height: 200px;
+  object-fit: contain;
+}
+.new_product .content ul li a:hover .img_bg {
+  background: #fd3838;
+}
+.new_product .content ul li a:hover .img_inner {
+  transform: translate(4px, -4px);
+  border: 1px solid #fd3838;
   overflow: hidden;
 }
-.new_product li .img_bg img {
-  height: 200px;
-  object-fit: cover;
+
+/*recipe */
+.recipe .content {
+  gap: 30px;
+  justify-content: space-between;
+  text-align: center;
 }
-.new_product li a:hover img {
-  animation: rotate 0.8s infinite;
-  transform-origin: center bottom;
+.recipe .content .con_left {
+  width: calc(100% - 320px);
+}
+.recipe .content .con_left > ul {
+  flex: 1;
+  border: 1px solid #dfdfdf;
+}
+.recipe .content .con_left > ul:first-child {
+  border-right: 0;
+}
+.recipe .content .con_left > ul:first-child > li:first-child {
+  border-bottom: 1px solid #dfdfdf;
+}
+.recipe .content .con_left > ul:last-child li {
+  width: 100%;
+  height: 100%;
+}
+.recipe .content .con_left > ul a {
+  display: inline-flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  padding: 30px;
+  position: relative;
+}
+.recipe .content .con_left > ul a .bg_l {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  left: 0;
+  top: 0;
+  display: inline-flex;
+  align-items: center;
+}
+.recipe .content .con_right {
+  position: relative;
+  padding-bottom: 47%;
+  max-width: 320px;
+  width: 100%;
+  background: url(../img/tip_bg.jpg) no-repeat center center/cover;
+}
+.recipe .content .con_right a {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 @keyframes rotate {
