--- a/trn03/css/common.scss
+++ b/trn03/css/common.scss
@@ -451,34 +451,104 @@ header {
     padding-left: 10px;
   }
 }
-.new_product {
+.new_product .content ul {
   gap: 30px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  & li {
+    width: calc(25% - 30px);
+    & a {
+      display: block;
+      text-align: center;
+      & .img_inner {
+        background: #fff;
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+      }
+      & h3 {
+        padding: 15px 0;
+        font-size: 20px;
+      }
+      & strong {
+        color: var(--sc);
+      }
+    }
+    & .img_bg {
+      position: relative;
+      width: 200px;
+      // height: 200px;
+      margin: 0 auto;
+      border-radius: 50%;
+      & img {
+        width: 100%;
+        height: 200px;
+        object-fit: contain;
+      }
+    }
+    & a:hover .img_bg {
+      background: #fd3838;
+    }
+    & a:hover .img_inner {
+      transform: translate(4px, -4px);
+      border: 1px solid #fd3838;
+      overflow: hidden;
+    }
+  }
 }
-.new_product li {
-  flex: 1;
-  width: 25%;
-  & a {
-    display: block;
-    text-align: center;
-    & h3 {
-      padding: 15px 0;
-      font-size: 20px;
-    }
-    & strong {
-      color: var(--sc);
+/*recipe */
+.recipe .content {
+  gap: 30px;
+  justify-content: space-between;
+  text-align: center;
+  & .con_left {
+    width: calc(100% - 320px);
+    & > ul {
+      flex: 1;
+      border: 1px solid #dfdfdf;
+      &:first-child {
+        border-right: 0;
+        & > li:first-child {
+          border-bottom: 1px solid #dfdfdf;
+        }
+      }
+      &:last-child li {
+        width: 100%;
+        height: 100%;
+      }
+      & a {
+        display: inline-flex;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        justify-content: center;
+        padding: 30px;
+        position: relative;
+        & .bg_l {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          background: rgba(0, 0, 0, 0.5);
+          left: 0;
+          top: 0;
+          display: inline-flex;
+          align-items: center;
+        }
+      }
     }
   }
-  & .img_bg {
-    overflow: hidden;
-    & img {
-      height: 200px;
-      object-fit: cover;
+  & .con_right {
+    position: relative;
+    padding-bottom: 47%;
+    max-width: 320px;
+    width: 100%;
+    background: url(../img/tip_bg.jpg) no-repeat center center/cover;
+    & a {
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 100%;
     }
-  }
-  & a:hover img {
-    //transform: rotate(20deg);
-    animation: rotate 0.8s infinite;
-    transform-origin: center bottom;
   }
 }
 
